--- a/wp-content/themes/listable-child-master/style.css
+++ b/wp-content/themes/listable-child-master/style.css
@@ -25,14 +25,364 @@ If you wish however, you can copy the whole style.css file from the parent here 
 In that case please remember that you still need to retain the header above (replace the header of the parent style.css with the one above),
 specifically the 'Template: listable' line. */
 
-p{
-    font-family: Raleway;
+
+body{
+    /*font-family: 'Pontano Sans', sans-serif;*/
+    font-family: 'Roboto', sans-serif;
 }
 
-.stories{
-    margin-top: 20px;
+/*p{*/
+    /*font-size: 16px;*/
+    /*line-height: 28px;*/
+/*}*/
+
+
+/* navigation */
+
+.menu-wrapper a{
+    text-decoration: none;
 }
 
-.page-template-front_page .page .entry-content {
-    padding-top: 10px;
+/* home page */
+
+.page-template-front_page .search_jobs--frontpage .search-submit {
+    font-size: 1.7rem;
+    border-radius: 0;
+}
+
+.page-template-front_page .top-categories a {
+    text-decoration: none;
+}
+
+.search-submit:hover{
+    background: #298dc8 !important;
+}
+
+.search_jobs--frontpage .search-filter-wrapper:last-of-type input, .search_jobs--frontpage .search-filter-wrapper:last-of-type select, .search_jobs--frontpage .search-filter-wrapper:last-of-type .chosen-single {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+}
+
+
+.blog-home{
+    padding: 50px 0 20px 0;
+}
+
+.blog-home .blog-widget-container{
+    margin-bottom: 20px;
+}
+
+
+.blog-home .section-title{
+    border-bottom: 1px solid #ec5214;
+    color: #ffffff;
+    padding: 5px 0;
+}
+
+.blog-home .read-more{
+    text-decoration: none;
+    color: #ec5214;
+    font-weight: 900;
+}
+
+.blog-home .read-more:hover{
+    color: #298dc8;
+}
+
+.blog-home .section-title span{
+    background: #ec5214;
+    padding: 5px 7px;
+}
+
+/* widget section start */
+
+.blog-widget{
+    background: #F6F6F6;
+    margin: 15px 0;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+
+}
+
+.blog-widget-top{
+    position: relative;
+}
+
+.blog-widget-top-content{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding: 10px 15px;
+}
+
+.blog-widget .widget-thumbnail{
+
+}
+
+
+.blog-widget .widget-thumbnail img {
+    width: 100%;
+    height: 180px;
+}
+
+.blog-category a:hover{
+    background: #298dc8;
+    color: #ffffff;
+}
+
+.gcm-btn{
+    border-radius: 0;
+    padding: 3px 6px;
+    font-size: 12px;
+}
+
+.blog-excerpt{
+    padding: 10px 15px;
+    font-weight: 300;
+    font-size: 14px;
+    letter-spacing: .3px;
+    word-spacing: 1px;
+    line-height: 22px;
+}
+
+.blog-meta{
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.blog-meta a{
+    text-decoration: none;
+    color: #ec5214;
+}
+
+.blog-meta a:hover{
+    color: #298dc8;
+}
+
+.blog-meta span{
+    margin-right: 10px;
+}
+
+.blog-meta .comment-count{
+    float: right;
+    margin-right: 0;
+}
+
+.blog-meta .fa{
+    color: #298dc8;
+}
+
+.blog-home-title h2{
+    color: #ffffff;
+    font-size: 20px;
+    background-color: rgba(0, 0, 0, .5);
+    padding: 5px 7px;
+}
+
+.blog-home-title a:hover{
+    text-decoration: none;
+}
+
+.blog-home-title h2:hover{
+    color: #298dc8;
+}
+
+.home-load-more{
+    margin: 20px 0;
+}
+
+.home-load-more button{
+    border-radius: 0px;
+    font-size: 16px;
+}
+.home-load-more button:hover{
+    background: #298dc8;
+    color: #ffffff;
+}
+
+
+/* widget section end */
+
+/* featured stories home */
+
+.featured-stories{
+    background: #F6F6F6;
+    background: #F6F6F6;
+    padding: 0 15px;
+    margin: 15px 0;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+    font-weight: 300;
+
+}
+
+
+.featured-stories .featured-widget{
+    padding: 20px 0;
+    border-bottom: 1px solid #ddd;
+}
+
+.featured-stories .featured-widget-thumbnail img {
+    width: 100%;
+    height: 150px;
+}
+
+.featured-stories .featured-story-title h3{
+    padding: 0;
+    margin: 0 0 5px 0;
+    color: #2b2b2b;
+}
+
+.featured-stories .featured-story-category a{
+    color: #ec5214;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 12px;
+    margin-right: 5px;
+}
+
+.featured-stories .featured-story-category a:hover{
+    color: #298dc8;
+}
+
+.featured-stories .featured-story-excerpt{
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
+/* home ad section-1 */
+
+.home-ad-1{
+    margin: 20px 0 30px 0;
+}
+
+.blog-home .widget-title{
+    border-bottom: 1px solid #2b2b2b;
+    color: #ffffff;
+    padding: 5px 0;
+}
+
+.blog-home .widget-title span{
+    background: #2b2b2b;
+    padding: 5px 7px;
+}
+
+.blog-home .recent-story-widget{
+    padding: 15px 0 5px 0;
+    border-bottom: 1px solid #ddd;
+}
+
+.blog-home .recent-story-thumbnail img {
+    width: 100%;
+    height: 55px;
+}
+
+.blog-home .recent-story-title h3{
+    padding: 0;
+    margin: 0;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.blog-home .recent-story-title a{
+    text-decoration: none;
+    color: #2b2b2b;
+ }
+
+.blog-home .recent-story-title a:hover h3{
+    color: #298dc8;
+ }
+
+
+/* recent comment widget */
+
+.home-recent-comments .recent-comment-widget a{
+    text-decoration: none;
+    color: #2b2b2b;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.home-recent-comments .recent-comment-widget a:hover{
+    color: #298dc8;
+}
+
+/* home video section */
+
+.home-video-section{
+    margin-bottom: 30px;
+}
+
+.home-video-section .home-video-widget{
+    position: relative;
+    margin: 15px 0;
+}
+.home-video-section .home-video-widget img{
+    /*filter: brightness(.4);*/
+    width: 100%;
+    height: 230px;
+}
+
+.home-video-widget .video-widget-meta{
+    position: absolute;
+    width: 100%;
+    top: 0;
+    padding: 10px 15px;
+    color: #ffffff;
+    background: rgba(0,0,0,.5);
+}
+
+.home-video-widget .video-widget-meta h3.video-title{
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 16px;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.home-video-widget .video-widget-meta a:hover h3.video-title{
+    color: #298dc8;
+}
+
+.home-video-widget .video-widget-meta span{
+    font-size: 12px;
+    margin-right: 5px;
+}
+
+.home-video-widget .video-widget-meta a{
+    color: #ec5214;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.home-video-widget .video-widget-meta a:hover{
+    color: #298dc8;
+}
+
+.home-video-widget .video-widget-meta span.comment-count{
+    float: right;
+}
+
+
+/* footer */
+
+.site-info > * {
+    font-size: 1.5rem;
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+
+
+}
+
+@media (max-width: 768px) {
+    .featured-stories .featured-widget-thumbnail{
+        margin-bottom: 10px;
+    }
+
 }
