--- a/wp-content/themes/listable-child-master/style.css
+++ b/wp-content/themes/listable-child-master/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Listable Child
+Theme Name: Listable Child Master
 Theme URI: https://pixelgrade.com/demos/listable/
 Author: PixelGrade
 Author URI: https://pixelgrade.com/
@@ -27,14 +27,11 @@ specifically the 'Template: listable' line. */
 
 
 body{
-    /*font-family: 'Pontano Sans', sans-serif;*/
-    font-family: 'Roboto', sans-serif;
-}
+    font-family: 'Pontano Sans', sans-serif;
+    /*font-family: 'Roboto', sans-serif;*/
 
-/*p{*/
-    /*font-size: 16px;*/
-    /*line-height: 28px;*/
-/*}*/
+    /*font-family: 'Indie Flower', cursive;*/
+}
 
 
 /* navigation */
@@ -75,7 +72,7 @@ body{
 }
 
 
-.blog-home .section-title{
+.section-title{
     border-bottom: 1px solid #ec5214;
     color: #ffffff;
     padding: 5px 0;
@@ -91,7 +88,7 @@ body{
     color: #298dc8;
 }
 
-.blog-home .section-title span{
+.section-title span{
     background: #ec5214;
     padding: 5px 7px;
 }
@@ -101,9 +98,9 @@ body{
 .blog-widget{
     background: #F6F6F6;
     margin: 15px 0;
-    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
-    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+    /*-webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);*/
+    /*-moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);*/
+    /*box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);*/
 
 }
 
@@ -125,10 +122,10 @@ body{
 
 .blog-widget .widget-thumbnail img {
     width: 100%;
-    height: 180px;
+    height: 220px;
 }
 
-.blog-category a:hover{
+.blog-category a:hover, .blog-category a:focus, .story-cat a:hover, .story-cat a:focus{
     background: #298dc8;
     color: #ffffff;
 }
@@ -137,6 +134,8 @@ body{
     border-radius: 0;
     padding: 3px 6px;
     font-size: 12px;
+    margin-right: 3px;
+    margin-bottom: 3px;
 }
 
 .blog-excerpt{
@@ -190,18 +189,29 @@ body{
     color: #298dc8;
 }
 
-.home-load-more{
+
+button#load-more{
     margin: 20px 0;
+    background: #ec5214;
+    border-radius: 0 ;
 }
 
-.home-load-more button{
-    border-radius: 0px;
-    font-size: 16px;
-}
-.home-load-more button:hover{
+button#load-more:hover{
     background: #298dc8;
-    color: #ffffff;
 }
+
+/*button.alm-load-more-btn{*/
+    /*margin: 20px 0;*/
+/*}*/
+
+/*button.alm-load-more-btn{*/
+    /*border-radius: 0px !important;*/
+    /*font-size: 16px;*/
+/*}*/
+/*button.alm-load-more-btn:hover{*/
+    /*background: #298dc8;*/
+    /*color: #ffffff;*/
+/*}*/
 
 
 /* widget section end */
@@ -255,22 +265,32 @@ body{
     margin-bottom: 15px;
 }
 
+
+/*  social-count */
+
+
 /* home ad section-1 */
 
 .home-ad-1{
     margin: 20px 0 30px 0;
 }
 
-.blog-home .widget-title{
+.blog-home .widget-title, .story-container .widget-title{
     border-bottom: 1px solid #2b2b2b;
     color: #ffffff;
     padding: 5px 0;
 }
 
-.blog-home .widget-title span{
+.blog-home .widget-title span, .story-container .widget-title span{
     background: #2b2b2b;
     padding: 5px 7px;
 }
+
+
+.widget-title{
+    margin-bottom: 25px;
+}
+
 
 .blog-home .recent-story-widget{
     padding: 15px 0 5px 0;
@@ -286,7 +306,11 @@ body{
     padding: 0;
     margin: 0;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 14px;
+}
+
+.blog-home .recent-story-excerpt{
+
 }
 
 .blog-home .recent-story-title a{
@@ -375,14 +399,367 @@ body{
     font-size: 1.5rem;
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
+
+/* accesspress plugins */
+
+/* plugin styles */
+
+a.apsc-facebook-icon {
+    background: #4c66a4 none repeat scroll 0 0;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+}
+div.apsc-inner-block {
+    padding: 10px 15px 8px;
+}
+span.social-icon i {
+    border-right: 1px solid;
+    font-size: 25px;
+    margin-right: 15px;
+    padding-right: 15px;
+}
+span.media-name {
+    display: none;
+}
+span.apsc-count {
+    font-size: 20px;
+}
+.apsc-media-type {
+    float: right;
+    font-size: 15px;
+    padding-top: 2px;
+    text-transform: uppercase;
+    vertical-align: middle;
+}
+a.apsc-twitter-icon {
+    background: #2fc2ef none repeat scroll 0 0;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+}
+a.apsc-google-plus-icon {
+    background: #D34836 none repeat scroll 0 0;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+}
+a.apsc-youtube-icon {
+    background: #CC181E none repeat scroll 0 0;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+}
+.apsc-each-profile {
+    margin-bottom: 15px;
+}
+
+/*  video widget  */
+
+.more-videos iframe, .featured-video iframe{
+    margin-bottom: 10px;
+}
+
+
+
+
+
+
+/* single post styles */
+
+.section-top{
+    width:100%;
+    height:500px;
+    overflow:hidden;
+    position:relative;
+}
+
+.section-top img{
+    width: 100%;
+    object-fit: cover;
+    filter: brightness(50%);
+}
+
+.section-top .story-header{
+    position: absolute;
+    top: 30%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    padding: 0 5%;
+}
+
+.story-header .story-cat, .published-by{
+    text-align: center;
+}
+
+.section-top h1.story-title{
+    color: #ffffff;
+    text-align: center;
+    font-size: 60px;
+    font-family: 'Oswald', sans-serif;
+    line-height: 70px;
+    text-transform: uppercase;
+}
+.story-header .published-by{
+    margin-top: 30px;
+}
+.story-header .published-by span{
+    color: #ffffff;
+    border-top: 1px solid #ffffff;
+    padding-top: 5px;
+}
+
+
+.story-container{
+    padding-top: 30px;
+}
+
+.story-container .story-meta{
+    border-top: 1px solid #e2e2e2;
+    border-bottom: 1px solid #e2e2e2;
+    padding: 15px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.story-container .story-meta a{
+    color: #ec5214;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-left: 5px;
+}
+
+.story-container .story-meta .fa{
+    color: #298dc8;
+}
+
+.story-container .story-meta .story-share{
+    float: right;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 8px;
+}
+
+.story-container .story-meta .story-share .fa{
+    margin: 0 5px;
+    font-size: 20px;
+}
+
+.story-container .story-content{
+    color: #2b2b2b;
+}
+
+.story-container .story-content h1,.story-container .story-content h2,.story-container .story-content h3,.story-container .story-content h4{
+    color: #2b2b2b;
+    font-family: 'Oswald', sans-serif;
+}
+
+.story-container .story-content h1{
+    line-height: 45px;
+}
+.story-container .story-content h2{
+    line-height: 40px;
+}
+.story-container .story-content h3{
+    line-height: 35px;
+}
+
+
+.story-container .story-content p{
+    letter-spacing: .8px;
+    word-spacing: .8px;
+    font-size: 16px;
+    line-height: 25px;
+    margin: 20px 0;
+}
+
+.story-container .story-content p:first-child::first-letter {
+    float: left;
+    border: 1px solid #2b2b2b;
+    float: left;
+    margin-bottom: 10px;
+    margin-right: 15px;
+    padding: 12px 18px;
+    font-size: 40px;
+    font-family: 'Pontano Sans', sans-serif;
+    font-weight: 900;
+
+}
+
+.story-container .story-content blockquote {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 50px;
+    padding-left: 15px;
+    border-left: 3px solid #ec5214;
+    font-family: 'Pontano Sans', sans-serif;
+    font-size: 14px;
+}
+
+.about-author{
+    border: 1px solid #e2e2e2;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.about-author h3.user-name{
+    margin: 0 0 8px 0;
+    color: #2b2b2b;
+    font-family: 'Oswald', sans-serif;
+}
+.about-author h3.view-all-post{
+    font-size: 14px;
+}
+
+.about-author h3.view-all-post a{
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.next-pre{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.next-pre a:hover{
+    background: #298dc8;
+    color: #ffffff;
+}
+
+.next-pre .previous-post{
+    float: right;
+}
+
+.similar-story{
+    margin-top: 20px;
+}
+
+
+/* media query */
+
+/* mobile */
+
+@media (max-width: 768px) {
+
+    .featured-stories .featured-widget-thumbnail{
+        margin-bottom: 10px;
+    }
+
+    .more-videos iframe, .featured-video iframe{
+        width: 330px;
+        height: 200px;
+    }
+
+    .section-top{
+        width:100%;
+        height:190px;
+        overflow:hidden;
+        position:relative;
+    }
+
+    .section-top .story-header{
+        top: 10px;
+    }
+
+
+    .section-top h1.story-title{
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .story-container .story-meta{
+        margin-top: 0;
+        font-size: 12px;
+    }
+
+    .story-container .story-meta a{
+        font-size: 12px;
+    }
+
+    .story-container .story-meta .story-share{
+        font-size: 12px;
+    }
+
+    .story-container .story-meta .story-share .fa{
+        font-size: 14px;
+    }
+
+    .story-container .story-content blockquote {
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-left: 10px;
+    }
+
+    .about-author {
+        margin-bottom: 15px;
+    }
+
+    .about-author h3.user-name{
+        font-size: 14px;
+        margin-bottom: 2px;
+    }
+    .about-author h3.view-all-post{
+        font-size: 10px;
+        margin: 0;
+    }
+
+    .about-author p{
+        font-size: 12px;
+        line-height: 14px;
+        margin-bottom: 2px;
+    }
 
 
 }
 
-@media (max-width: 768px) {
-    .featured-stories .featured-widget-thumbnail{
-        margin-bottom: 10px;
+/* desktop */
+
+@media (min-width: 768px) {
+
+    .more-videos iframe, .featured-video iframe{
+        width: 360px;
+        height: 215px;
+    }
+
+}
+
+/* tab */
+@media (min-width: 768px) and (max-width: 992px) {
+
+    .blog-home-title h2{
+        font-size: 14px;
+        padding: 3px 5px;
+    }
+
+    .blog-widget .widget-thumbnail img {
+        width: 100%;
+        height: 130px;
+    }
+    .blog-category{
+        display: none;
+    }
+
+    .blog-excerpt{
+        font-size: 12px;
+    }
+
+    .blog-widget{
+        height: 300px;
+    }
+
+    .blog-meta{
+        font-size: 10px;
+    }
+
+    .more-videos iframe, .featured-video iframe{
+        width: 220px;
+        height: 150px;
+    }
+
+    .story-container .story-meta{
+        margin-top: 8px;
+        font-size: 12px;
     }
 
 }
