category excluded from more video section

--- a/wp-content/themes/listable-child-master/style.css
+++ b/wp-content/themes/listable-child-master/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Listable Child Master
 Theme URI: https://pixelgrade.com/demos/listable/
-Author: PixelGrade
+Author: Shimul
 Author URI: https://pixelgrade.com/
 Description: A directory WordPress theme that will help you create and manage a local or global listings site.
 Template: listable
