--- a/wp-content/themes/listable-child-master/style.css
+++ b/wp-content/themes/listable-child-master/style.css
@@ -26,7 +26,6 @@ In that case please remember that you still need to retain the header above (rep
 specifically the 'Template: listable' line. */
 
 
-
 body{
     font-family: 'Pontano Sans', sans-serif;
     /*font-family: 'Roboto', sans-serif;*/
@@ -644,3 +643,6 @@ h4.modal-video-title{
     }
 
 }
+
+
+/* the end */
